# OpenSeed-detect

./: .gitignore  README.md  eval.py  pyproject.toml  train.py
notebooks/: generate_dataset.ipynb
ultralytics/cfg/datasets/: OpenSeed-LZU-detect-world.yaml  OpenSeed-LZU-detect.yaml  OpenSeed-LZU-raw.yaml  OpenSeed-LZU-seg-world.yaml  OpenSeed-LZU-seg.yaml
ultralytics/cfg/models/11/: yolo11.yaml  yoloe-11-seg.yaml  yoloe-11.yaml
ultralytics/cfg/models/master/: yolo-master-seg.yaml  yolo-master.yaml
ultralytics/cfg/models/rt-detr/: rtdetr-l.yaml  rtdetr-resnet101.yaml  rtdetr-resnet50.yaml  rtdetr-x.yaml
ultralytics/cfg/models/v12/: yolov12.yaml
ultralytics/cfg/models/v13/: yolov13-seg.yaml  yolov13.yaml
ultralytics/cfg/models/v5/: yolov5-seg.yaml  yolov5.yaml
ultralytics/cfg/models/v8/: yolov8-worldv2.yaml  yolov8.yaml
ultralytics/models/yolo/detect/: val.py
ultralytics/nn/: tasks.py
ultralytics/nn/modules/: __init__.py  block.py  block1.py  conv.py
ultralytics/utils/: __init__.py  dist.py  metrics.py
